load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["listenandserve.go"],
    importpath = "github.com/uhthomas/tesla_exporter/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/x/context",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_x_sync//errgroup",
    ],
)
