load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tesla_exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/uhthomas/tesla_exporter/cmd/tesla_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//internal",
        "//internal/collector",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_uhthomas_tesla//:tesla",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "tesla_exporter",
    embed = [":tesla_exporter_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")

docker_push(
    name = "push",
    image = ":tesla_exporter",
    registry = "ghcr.io",
    repository = "uhthomas/tesla_exporter",
    tag = "{STABLE_GIT_COMMIT}",
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "bundle",
    images = {
        "ghcr.io/uhthomas/tesla_exporter:latest": ":tesla_exporter",
        "ghcr.io/uhthomas/tesla_exporter:{STABLE_GIT_REF}": ":tesla_exporter",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_tag",
    bundle = ":bundle",
    # Pushing layers concurrently sometimes fails.
    # See GitHub support ticket 885486.
    sequential = True,
)
