load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collector",
    srcs = ["vehicle.go"],
    importpath = "github.com/uhthomas/tesla_exporter/internal/collector",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_uhthomas_tesla//:tesla",
    ],
)

go_test(
    name = "collector_test",
    srcs = ["vehicle_test.go"],
    embed = [":collector"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_uhthomas_tesla//:tesla",
    ],
)
